# veesion-test

./: .gitignore  README.md  pyproject.toml
notebooks/: task_1.ipynb
scripts/: t1_recurrent_model_predict.py  t1_recurrent_model_train.py  t1_skeleton_detection.py  t2_frame_encoder_train.py  t2_video_classification_predict.py  t2_video_classification_train.py
src/: __init__.py  models_setup.py  viz_utils.py
src/callbacks/: post_pred_callback.py
src/datasets/: frame_pair_dataset.py  skeleton_dataset.py  videos_dataset.py
src/models/: frame_encoder.py  lstm_classifier.py  lstm_video_classifier.py  transformer_video_classifier.py
src/tasks/: pose_classification_task.py  ssl_frame.py  video_classification.py
